改了些细节 明天开始写chap3
定稿之前还是需要打印出来逐字逐句读：）

--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -266,7 +266,7 @@
   \subsection{分类学分析}
   对于测序数据进行OTU聚类，采用RDP classifier贝叶斯算法对97\%相似水平的OTU代表序列进行分类学分析，并分别在各个分类水平（从域（domain）到属（genus））统计各样本的群落组成，比对silva数据库得出各群落数量。
     \subsubsection{门（phylum）水平}
-    在门水平，三组患儿肠道内以变形菌门（\textit{Proteobacteria}）、厚壁菌门(\textit{Firmicutes})、和放线菌门为主导（{\textit{Actinobacteria}）。变形菌门的丰度在LOS组最高（59.67\%），对照组次之（59.67\%），NEC组最低（38.53\%），三组丰度显著不同（p = 0.017）；厚壁菌门(\textit{Bacilli})丰度在组最高NEC（59.59\%），对照组次之（44.88\%），LOS组最低（39.54\%），且三组间丰度呈显著性差异（p = 0.017）；放线菌门（{\textit{Actinobacteria}）的丰度对照组最高（3.40\%），NEC组次之（1.10\%），LOS组最低（0.06\%），三组丰度组间差异显著（p = 0.001）（图\ref{fig:2phylum}）。
+    在门水平，三组患儿肠道内以变形菌门（\textit{Proteobacteria}）、厚壁菌门(\textit{Firmicutes})、和放线菌门为主导（{\textit{Actinobacteria}）。变形菌门的丰度在LOS组最高（59.67\%），对照组次之（59.67\%），NEC组最低（38.53\%），三组丰度显著不同（p = 0.017）；厚壁菌门(\textit{Bacilli})丰度在NEC组最高（59.59\%），对照组次之（44.88\%），LOS组最低（39.54\%），且三组间丰度呈显著性差异（p = 0.017）；放线菌门（{\textit{Actinobacteria}）的丰度对照组最高（3.40\%），NEC组次之（1.10\%），LOS组最低（0.06\%），三组丰度组间差异显著（p = 0.001）（图\ref{fig:2phylum}）。
       %门水平配图
       \begin{figure}[!htp]
         \centering
@@ -314,7 +314,7 @@
       \end{figure}
 
     \subsubsection{属（genus）水平}
-    属水平上，肠道菌群以克雷伯菌属（\textit{Klebsiella}）、肠球菌属（\textit{Enterococcus}）、埃希菌-志贺菌属（\textit{Escherichia-Shigella}）、乳球菌属（\textit{Lactococcus}）、链球菌属（\textit{Streptococcus}）、葡球菌属（\textit{Staphylococcus}）和假单胞菌属（\textit{Pseudomonas}）占主导。克雷博菌在LOS组丰度最高（\%42.15），且三组丰度差异不显著（p = 0.025）；肠球菌属在三组的丰度分别为NEC组20.86\%，LOS组18.14\%，对照组8.45\%，三组间差异不显著（p = 0.105）；埃希菌-志贺菌属在三组的丰度分别为NEC组4.83\%，LOS组12.99\%，对照组10.14\%，三组丰度差异不显著（p = 0.291）；LOS组乳球菌属丰度3.65\%，显著低于对照组（3.65\%，p = 0.006）；链球菌属在三组的丰度分别为NEC组8.67\%，LOS组5.04\%，对照组5.28\%，三组间差异显著（p = 0.0.022）；LOS葡球菌属丰度0.15\%，对照组丰度为5.79\%，三组间差异在统计学上非显著（p = 0.526）；假单胞菌菌属在三组的丰度分别为NEC组2.41\%，LOS组2.05\%，对照组5.40\%，且三组间丰度存在显著性差异（p = 0.0.039）（图\ref{fig:2genus}）。
+    属水平上，肠道菌群以克雷伯菌属（\textit{Klebsiella}）、肠球菌属（\textit{Enterococcus}）、埃希菌-志贺菌属（\textit{Escherichia-Shigella}）、乳球菌属（\textit{Lactococcus}）、链球菌属（\textit{Streptococcus}）、葡球菌属（\textit{Staphylococcus}）和假单胞菌属（\textit{Pseudomonas}）占主导。克雷伯菌在LOS组丰度最高（\%42.15），且三组丰度差异不显著（p = 0.025）；肠球菌属在三组的丰度分别为NEC组20.86\%，LOS组18.14\%，对照组8.45\%，三组间差异不显著（p = 0.105）；埃希菌-志贺菌属在三组的丰度分别为NEC组4.83\%，LOS组12.99\%，对照组10.14\%，三组丰度差异不显著（p = 0.291）；LOS组乳球菌属丰度3.65\%，显著低于对照组（3.65\%，p = 0.006）；链球菌属在三组的丰度分别为NEC组8.67\%，LOS组5.04\%，对照组5.28\%，三组间差异显著（p = 0.0.022）；LOS葡球菌属丰度0.15\%，对照组丰度为5.79\%，三组间差异在统计学上非显著（p = 0.526）；假单胞菌菌属在三组的丰度分别为NEC组2.41\%，LOS组2.05\%，对照组5.40\%，且三组间丰度存在显著性差异（p = 0.0.039）（图\ref{fig:2genus}）。
       %属水平配图
       \begin{figure}[!htp]
         \centering
@@ -340,7 +340,7 @@
   %多样性
   \subsection{多样性分析和纵向分析}
     \subsubsection{NEC, LOS和对照组患儿间肠道菌群$\alpha$多样性分析}
-      基于OTU进行计算，NEC、LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.47，p = 0.06），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:shannon}，p = 0.01）。NEC, LOS和对照组Simpson指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组Simpson指数无统计学差异（p = 0.77）、NEC组和对照组存在统计学差异（p = 0.03），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:simpson}，p = 0.02）。
+      基于OTU进行计算，NEC、LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.47，p = 0.06），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:shannon}，p = 0.01）。NEC, LOS 和对照组Simpson指数分别为：0.51，0.53和0.41；三组两两比较，可知LOS组和NEC组Simpson指数无统计学差异（p = 0.77）、NEC组和对照组存在统计学差异（p = 0.03），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:simpson}，p = 0.02）。
       %alpha多样性图
       \begin{figure}[!htp]
         \centering
