--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -30,7 +30,7 @@
   \subsection{诊断标准}
     坏死性小肠结肠炎(NEC)诊断和分级：关注每名患儿入院后的健康情况，评估并记录一般情况全身，腹部平片报告结果等；根据“改良Bell分级标准”\cite{bell1978neonatal}：II期，伴有放射性肠扩张，肠梗阻，肠道积气和/或腹部压痛，和/或轻度代谢性酸中毒，肠鸣音减弱，血小板减少症。
 
-    先天性巨结肠（HD）根据Elhalaby临床诊断标准\cite{elhalaby1995enterocolitis}和Teitelbaum病理诊断为标准。
+    先天性巨结肠（HD）诊断标准为Elhalaby临床诊断标准\cite{elhalaby1995enterocolitis}和Teitelbaum病理诊断标准。
 
     炎症性肠病（IBD）的准确诊断：基于病史，体格检查和实验室检查，食管胃十二指肠镜检查（EGD）和组织学的回肠结肠镜检查以及小肠镜的组合。
 
