--- a/bib/chap1.bib
+++ b/bib/chap1.bib
@@ -560,3 +560,14 @@
   year={1982},
   publisher={Elsevier}
 }
+
+@article{yoo2017enteric,
+  title={The enteric network: interactions between the immune and nervous systems of the gut},
+  author={Yoo, Bryan B and Mazmanian, Sarkis K},
+  journal={Immunity},
+  volume={46},
+  number={6},
+  pages={910--926},
+  year={2017},
+  publisher={Elsevier}
+}
