--- a/tex/chap1intro.tex
+++ b/tex/chap1intro.tex
@@ -11,7 +11,7 @@
 \label{chap:introduction}
 
 \section{人体肠道菌群及其早期定植特点}
-肠道菌群是指定植于人或其他动物消化道内的微生物群落，人体肠道也是体内最大的免疫器官。作为人体本身和外部环境的主要界面，肠道必须保护其免收有害抗原（如毒素和病原体）的侵害，同时容纳和耐受对自身健康有益的共生细菌——这是一项艰巨的任务，因为细菌病原体和共生菌之间平衡的改变将肠道从健康的肠内稳态（intestinal homeostasis）\cite{collier2005innate}转变为不受控制的炎症状态，这可能导致肠道本身的损伤，也可能干扰其他系统的正常生理功能，从而与多种疾病的发生发展息息相关，包括炎症性肠病（Inflammatory Bowel Disease，IBD）\cite{ni2017gut}，II型糖尿病\cite{harsch2018role}，自闭症\cite{de2014altered, de2013fecal}等疾病。共生细菌为人类宿主的健康提供诸多保障，包括维持肠内稳态\cite{hooper2001commensal}，保护其免受外界伤害\cite{rakoff2004recognition}，维护和支持消化功能\cite{guarner2006mechanisms}，调节肠道免疫功能\cite{round2009gut,abreu2010toll}等。
+肠道菌群是指定植于人或其他动物消化道内的微生物群落，人体肠道也是体内最大的免疫器官。作为人体本身和外部环境的主要界面，肠道必须保护其免收有害抗原（如毒素和病原体）的侵害，同时容纳和耐受对自身健康有益的共生细菌——这是一项艰巨的任务，因为细菌病原体和共生菌之间平衡的改变将肠道从健康的肠内稳态（intestinal homeostasis）\cite{collier2005innate}转变为不受控制的炎症状态，这可能导致肠道本身的损伤，也可能干扰其他系统的正常生理功能，从而与多种疾病的发生发展息息相关，包括炎症性肠病（Inflammatory Bowel Disease，IBD）\cite{ni2017gut, yoo2017enteric}，II型糖尿病\cite{harsch2018role}，自闭症\cite{de2014altered, de2013fecal}等疾病。共生细菌为人类宿主的健康提供诸多保障，包括维持肠内稳态\cite{hooper2001commensal}，保护其免受外界伤害\cite{rakoff2004recognition}，维护和支持消化功能\cite{guarner2006mechanisms}，调节肠道免疫功能\cite{round2009gut,abreu2010toll}等。
 
 长久以来，新生儿肠道被认为是一种无菌环境，但近年的研究证实了胎粪中的微生物群和羊水中的潜在微生物群的相关性\cite{ardissone2014meconium}，以及早产儿气道内的不动杆菌属(\textit{Acinetobacter})\cite{lohmann2014airway}，这表明肠道微生物的获取可能从胎儿在非无菌宫内条件下就开始了。然而，在重复这些研究结果之前，考虑到非基于培养的测序方法\cite{pennisi2014our}中细菌污染的影响以及取样时羊膜可能不完整，其结果应被谨慎考虑。
 
