--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -52,3 +52,14 @@
   参照\ref{原始数据处理}
   \subsection{统计学方法}
   参照\ref{统计学方法}
+
+\section{结果}
+  \subsection{患者基本情况}
+
+  \subsection{样本及测序信息}
+  入选HAEC患儿4例，HD患儿7例，NEC患儿6例，IBD患儿7例，共24例。采集其横向粪便标本，共192个，其中HAEC标本14个，HD标本22个，NEC标本15个，IBD标本7个。其他临床资料见表\ref{tab:necdemographic}。
+
+  使用Illumina MiSeq高通量测序、优化后，得到2,749,518条16s rRNA基因序列，优化碱基数目共1223776595，优化平均序列长度为445bp。
+
+  \subsection{分类学分析}
+  对于测序数据进行OTU聚类，采用RDP classifier贝叶斯算法对97\%相似水平的OTU代表序列进行分类学分析，并分别在各个分类水平（从域（domain）到属（genus））统计各样本的群落组成，比对silva数据库得出各群落数量。
