--- a/tex/app_archive.tex
+++ b/tex/app_archive.tex
@@ -7,9 +7,9 @@
 
 \section{原始测序数据}
   \subsection{坏死性小肠结肠炎（NEC）肠道菌群MiSeq测序原始数据}
-  为每个样本生成单独的FASTQ文件，存档至BioProject登记号为\href{https://www.ncbi.nlm.nih.gov/bioproject/PRJNA470548}{No.PRJNA470548}的序列读取归档NCBI中。
-  \subsection{儿科炎症性肠病肠道菌群MiSeq测序原始数据}
-  \href{github.com/jiayiliujiayi/masterthesis/fasta/comparison}{github.com/jiayiliujiayi/masterthesis/fasta/comparison}
+  为每个样本生成单独的FASTQ文件，存档至BioProject登记号为\href{https://www.ncbi.nlm.nih.gov/bioproject/PRJNA470548}{PRJNA470548}的NCBI序列读取归档中。
+  \subsection{儿科肠道炎症性疾病肠道菌群MiSeq测序原始数据}
+  为每个样本生成单独的FASTQ文件，存档至BioProject登记号为\href{https://www.ncbi.nlm.nih.gov/bioproject/PRJNA518158}{PRJNA518158}的NCBI序列读取归档中。
 
 \section{论文源代码和原始图片}
   \subsubsection{源代码\protect\footnote{本论文使用 \LaTeX 编译生成}}
