--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -225,7 +225,7 @@
 
 \section{结果}
   \subsection{患者基本情况}
-  2013年7月至2014年12月，共有1148名早产儿入院，其中5名在此期间诊断为坏死性小肠结肠炎（NEC）；发病率4.4％， 与总体发病率一致 [6] 。 在所有早产儿中，有130名符合我们的研究标准，并向其收集了1698份粪便标本。
+  2013年7月至2014年12月，共有1148名早产儿入院，其中5名在此期间诊断为坏死性小肠结肠炎（NEC）；发病率4.4％， 与总体发病率一致{rees2010national}。 在所有早产儿中，有130名符合我们的研究标准，并向其收集了1698份粪便标本。
 
   本研究最终选择24个充分采样的早产儿，包括4名坏死性小肠结肠炎（NEC）患儿（2个IIA期和2个IIB期），3个迟发型败血症LOS和17个匹配对照（表S1）；共收集192个样本，其中NEC标本47个，LOS标本44个，对照组标本101个，并进行16s rRNA 基因测序。
 
@@ -245,12 +245,12 @@
     \label{tab:necdemographic}
     \begin{tabular}{lp{1.8cm}p{1.8cm}p{1.8cm}p{2cm}c}
       \toprule
-         & \textbf{NEC(n=3)} & \textbf{LOS(N=4)} & \textbf{Control(n-17)} & \textbf{Statistical Test} & \textit{p value} \\ \midrule
+         & \textbf{NEC(N=3)} & \textbf{LOS(N=4)} & \textbf{Control(N=17)} & \textbf{Statistical Test} & \textit{p value} \\ \midrule
         \textbf{胎龄(周)} & 29(29-30) & 30(29-31) & 31(28-33) & Kruskal-Wallis test & 0.074 \\
         \textbf{出生体重(克)} & 1416.3 (773.4-2149.1) & 1141.7 (633.4-1649.9) & 1527.4 (1391.6-1663.1) & Kruskal-Wallis test & 0.111 \\
         \textbf{性别} &  &  &  & Fisher's test & 0.82 \\
-        \multicolumn{1}{r}{女} & 3(75\%) & 2(\%67) & 9(\%53) &  & \\
-        \multicolumn{1}{r}{男} & 1(25\%) & 1(\%33) & 8(\%47) &  & \\
+        \multicolumn{1}{r}{女} & 3(75\%) & 2(67\%) & 9(53\%) &  & \\
+        \multicolumn{1}{r}{男} & 1(25\%) & 1(33\%) & 8(47\%) &  & \\
         \textbf{诊断时年龄(天)} & 16(11-19) & 12(10-22) & — & Wilcoxon rank-sum test & 0.629 \\
         \textbf{住院时长(天)} & 54.3 (13.5-95.0) & 60.0 (24.8-95.2) & 32.9 (26.3-39.5) & Kruskal-Wallis test & 0.046 \\
         \textbf{标本总数} & 46 & 42 & 103 & — & — \\ \bottomrule
