--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -52,12 +52,39 @@
   参照\ref{原始数据处理}
   \subsection{统计学方法}
   参照\ref{统计学方法}
+  \begin{enumerate}
+    \item 使用anova和卡方检验比较患者临床基本信息。
+    \item 使用Kruskal-Wallis H test检验各分类水平下各物种在各组间的分布（相对丰度）是否存在显著性差异；使用Benjaminia and Hochberg法对\textit{p}值进行多重检验矫正。使用Student’s \textit{t}检验检验各分类水平下各物种在两个组之间的分布（相对丰度）是否存在显著性差异；使用Benjaminia and Hochberg法对\textit{p}值进行多重检验矫正。
+    \item 使用Student’s t检验评估两组间多样性指数的差异。若p < 0.05 则表示差异有统计学意义。过$\alpha$多样性分析可以得到群落（分组或者单个样本）中物种的丰度、覆盖度和多样性等信息。
+    \item 利用Wilcoxon秩和检验，对每一组中的亚组进行两两检验，在具有显著差异物种类中的所有亚种比较是否都趋同于同一分类级别。
+  \end{enumerate}
 
 \section{结果}
   \subsection{患者基本情况}
 
   \subsection{样本及测序信息}
-  入选HAEC患儿4例，HD患儿7例，NEC患儿6例，IBD患儿7例，共24例。采集其横向粪便标本，共192个，其中HAEC标本14个，HD标本22个，NEC标本15个，IBD标本7个。其他临床资料见表\ref{tab:necdemographic}。
+  入选HAEC患儿4例，HD患儿7例，NEC患儿6例，IBD患儿7例，共24例。采集其横向粪便标本，共192个，其中HAEC标本14个，HD标本22个，NEC标本15个，IBD标本7个。其他临床资料见表\ref{tab:comparedemographic}。
+
+  \begin{table}[!hpb]
+    \centering
+    \bicaption[早产儿患者临床情况]
+      {早产儿患者临床情况\footnotemark[1]}
+      {Demographic characteristics of Preterm NEC, LOS and control groups.}
+    \label{tab:comparedemographic}
+    \begin{tabular}{lp{1.8cm}p{1.8cm}p{1.8cm}p{1.8cm}p{2cm}c}
+      \toprule
+         & \textbf{HAEC(n=4)} & \textbf{HD(N=7)} & \textbf{NEC(N=6)} & \textbf{IBD(N=7)} & \textbf{Statistical Test} & \textit{p value} \\ \midrule
+        \textbf{胎龄(周)} & 29(29-30) & 30(29-31) & 31(28-33) & Kruskal-Wallis test & 0.074 \\
+        \textbf{出生体重(克)} & 1416.3 (773.4-2149.1) & 1141.7 (633.4-1649.9) & 1527.4 (1391.6-1663.1) & Kruskal-Wallis test & 0.111 \\
+        \textbf{性别} &  &  &  & Fisher's test & 0.82 \\
+        \multicolumn{1}{r}{女} & 3(75\%) & 2(\%67) & 9(\%53) &  & \\
+        \multicolumn{1}{r}{男} & 1(25\%) & 1(\%33) & 8(\%47) &  & \\
+        \textbf{诊断时年龄(天)} & 16(11-19) & 12(10-22) & — & Wilcoxon rank-sum test & 0.629 \\
+        \textbf{住院时长(天)} & 54.3 (13.5-95.0) & 60.0 (24.8-95.2) & 32.9 (26.3-39.5) & Kruskal-Wallis test & 0.046 \\
+        \textbf{标本总数} & 46 & 42 & 103 & — & — \\ \bottomrule
+    \end{tabular}
+  \end{table}
+
 
   使用Illumina MiSeq高通量测序、优化后，得到2,749,518条16s rRNA基因序列，优化碱基数目共1223776595，优化平均序列长度为445bp。
 
