--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -74,7 +74,7 @@
     \begin{tabular}{lp{1.8cm}p{1.8cm}p{1.8cm}p{1.8cm}p{2cm}c}
       \toprule
          & \textbf{HAEC(n=4)} & \textbf{HD(N=7)} & \textbf{NEC(N=6)} & \textbf{IBD(N=7)} & \textbf{Statistical Test} & \textit{p value} \\ \midrule
-        \textbf{胎龄(周)} & 29(29-30) & 30(29-31) & 31(28-33) & Kruskal-Wallis test & 0.074 \\
+        \textbf{年龄（天）)} & 29(29-30) & 30(29-31) & 31(28-33) & Kruskal-Wallis test & 0.074 \\
         \textbf{出生体重(克)} & 1416.3 (773.4-2149.1) & 1141.7 (633.4-1649.9) & 1527.4 (1391.6-1663.1) & Kruskal-Wallis test & 0.111 \\
         \textbf{性别} &  &  &  & Fisher's test & 0.82 \\
         \multicolumn{1}{r}{女} & 3(75\%) & 2(\%67) & 9(\%53) &  & \\
