--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -74,14 +74,12 @@
     \begin{tabular}{lp{1.8cm}p{1.8cm}p{1.8cm}p{1.8cm}p{2cm}c}
       \toprule
          & \textbf{HAEC(n=4)} & \textbf{HD(N=7)} & \textbf{NEC(N=6)} & \textbf{IBD(N=7)} & \textbf{Statistical Test} & \textit{p value} \\ \midrule
-        \textbf{年龄（天）)} & 29(29-30) & 30(29-31) & 31(28-33) & Kruskal-Wallis test & 0.074 \\
-        \textbf{出生体重(克)} & 1416.3 (773.4-2149.1) & 1141.7 (633.4-1649.9) & 1527.4 (1391.6-1663.1) & Kruskal-Wallis test & 0.111 \\
+        \textbf{年龄（天）} & 181(134-1162) & 222(79-368) & 89(62-220) & 4045(372-5110) & Kruskal-Wallis test & 0.074 \\
+        \textbf{胎龄(周)} & 1416.3 (773.4-2149.1) & 1141.7 (633.4-1649.9) & 1527.4 (1391.6-1663.1) & Kruskal-Wallis test & 0.111 \\
         \textbf{性别} &  &  &  & Fisher's test & 0.82 \\
-        \multicolumn{1}{r}{女} & 3(75\%) & 2(\%67) & 9(\%53) &  & \\
-        \multicolumn{1}{r}{男} & 1(25\%) & 1(\%33) & 8(\%47) &  & \\
-        \textbf{诊断时年龄(天)} & 16(11-19) & 12(10-22) & — & Wilcoxon rank-sum test & 0.629 \\
-        \textbf{住院时长(天)} & 54.3 (13.5-95.0) & 60.0 (24.8-95.2) & 32.9 (26.3-39.5) & Kruskal-Wallis test & 0.046 \\
-        \textbf{标本总数} & 46 & 42 & 103 & — & — \\ \bottomrule
+        \multicolumn{1}{r}{女} & 1(25\%) & 1(\%14) & 2(\%33) & Chi-square test & 0.873\\
+        \multicolumn{1}{r}{男} & 3(75\%) & 6(\%86) & 4(\%67) &  & \\
+         \bottomrule
     \end{tabular}
   \end{table}
 
