--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -77,8 +77,8 @@
         \textbf{年龄（天）} & 181(134-1162) & 222(79-368) & 89(62-220) & 4045(372-5110) & Kruskal-Wallis test & 0.074 \\
         \textbf{胎龄(周)} & 1416.3 (773.4-2149.1) & 1141.7 (633.4-1649.9) & 1527.4 (1391.6-1663.1) & Kruskal-Wallis test & 0.111 \\
         \textbf{性别} &  &  &  & Fisher's test & 0.82 \\
-        \multicolumn{1}{r}{女} & 1(25\%) & 1(\%14) & 2(\%33) & Chi-square test & 0.873\\
-        \multicolumn{1}{r}{男} & 3(75\%) & 6(\%86) & 4(\%67) &  & \\
+        \multicolumn{1}{r}{女} & 1(25\%) & 1(\%14) & 2(\%33) & 2(\%29)Chi-square test & 0.873\\
+        \multicolumn{1}{r}{男} & 3(75\%) & 6(\%86) & 4(\%67) & 5(\%71) &  &\\
          \bottomrule
     \end{tabular}
   \end{table}
