chap2根据老板指示修改
commit from github desttop

--- a/tex/app_table.tex
+++ b/tex/app_table.tex
@@ -7,20 +7,22 @@
 %每名患儿基本情况
 \begin{sidewaystable}[h]
   \tiny
-\caption{NEC,LOS和对照组每名患儿基本情况} % title name of the table
+\bicaption[NEC, LOS和对照组每名患儿基本情况]
+  {NEC, LOS和对照组每名患儿一般情况}
+  {Demographic characteristics of every preterm patient from NEC, LOS and control groups.}% title name of the table
 \centering % centering table
 \begin{tabular}{ccccccp{2cm}p{2cm}cc} % creating 10 columns
 \hline\hline % inserting double-line
-Group & PatientID & Gender& Gestational Age(weeks) & Birth weight(g) & NEC Stage & Septic Pathogen & Diagnose Age(d) & ATB duration (d) & Length of Stay \\ [0.05ex]
+Group & PatientID & Gender& Gestational Age(weeks) & Birth weight(g) & NEC Stage & Septic Pathogen & Diagnose Age(d) & ATB duration (d) & Length of Stay(d) \\ [0.05ex]
 \hline % inserts single-line
 % Entering 1st row
 NEC & NEC1 & Male & 29 & 1690 & IIB & — & 11 & — & 63 \\
 NEC & NEC2 & Female & 29 & 1025 & IIB & — & 19 & — & 221 \\
 NEC & NEC3 & Female & 30 & 1950 & IIA & — & 16 & — & 49 \\
 NEC & NEC4 & Female & 29 & 1180 & IIA & — & 18 & — & 83 \\
-LOS & LOS1 & Male & 29 & 1080 & — & Klebsiella Pneumoniae & 19 & 21 & 65 \\
-LOS & LOS2 & Female & 30 & 975 & — & Acinetobacter baumannii \&  Klebsiella Pneumoniae \&  Pseudomonas aeruginosa & 3 & 37 & 71 \\
-LOS & LOS3 & Female & 31 & 1370 & — & N—A & 14 & 13 & 44 \\
+LOS & LOS1 & Male & 29 & 1080 & — & Klebsiella Pneumoniae & 22 & 21 & 65 \\
+LOS & LOS2 & Female & 30 & 975 & — & Acinetobacter baumannii \&  Klebsiella Pneumoniae \&  Pseudomonas aeruginosa & 10 & 37 & 71 \\
+LOS & LOS3 & Female & 31 & 1370 & — & N—A & 17 & 13 & 44 \\
 Control & Control1 & Male & 28 & 1090 & — & — & — & — & 58 \\
 Control & Control2 & Female & 28 & 1350 & — & — & — & — & 56 \\
 Control & Control3 & Male & 29 & 1230 & — & — & — & — & 23 \\
