--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -11,26 +11,26 @@
 \label{chap:nec}
 
 \section{引言}
-肠道菌群紊乱常常见于多种早产并发症，包括坏死性小肠结肠炎（Necrotizing Enterocolitis, NEC）和迟发性败血症（Late-Onset Sepsis，LOS）。前者是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关\cite{neu2011necrotizing}，在早产儿发病率为4～7\%\cite{rees2010national}；起病快，进展凶险，严重者可致死。近年来有研究发现肠道菌群紊乱存在于NEC发病期间。后者是一种在出生后72小时后发生的败血症，其是早产儿和极低出生体重的死亡主要原因之一\cite{stoll2002late}。近期，有报道LOS患儿肠道内菌群多样性下降\cite{mai2013distortions}，致病菌包括肠球菌（\textit{Enterococcus}）丰度增加\cite{stewart2017longitudinal}，提示肠道菌群紊乱与LOS发病相关。本研究拟自早产儿出生后纵向收集其粪便标本，标准化处理后进行二代测序，以探究肠道菌群定植模式发展对于NEC和LOS发病的贡献，为其预防治疗提供理论基础。
+肠道菌群紊乱常常见于多种早产并发症，包括坏死性小肠结肠炎（Necrotizing Enterocolitis, NEC）和迟发性败血症（Late-Onset Sepsis，LOS）。前者是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关\cite{neu2011necrotizing}，在早产儿发病率为4～7\%\cite{rees2010national}；起病快，进展凶险，严重者可致死。近年来有研究发现肠道菌群紊乱存在于NEC发病期间。后者是一种在出生后72小时后发生的败血症，其是早产儿和极低出生体重的死亡主要原因之一\cite{stoll2002late}。近期，有报道LOS患儿肠道内菌群多样性下降\cite{mai2013distortions}，致病菌包括肠球菌（\textit{Enterococcus}）丰度增加\cite{stewart2017longitudinal}，提示肠道菌群紊乱与LOS发病相关。本研究拟前瞻性观察早产儿出生后总想肠道菌群变化规律，以探究肠道菌群不同变化轨迹与NEC和LOS发生发展的相关规律，为明确其发病机制并早期预防、诊断和治疗提供依据。
 
 \section{材料与方法}
   \subsection{伦理}
-  该研究经上海市儿童医学中心伦理联合委员会批准，上海交通大学医学院（SCMCIRB-K2013022）。 在从采集婴儿粪便样本之前，取得其监护人理解、同意并于知情同意书上签字。
+  该研究经上海交通大学医学院附属上海儿童医学中心伦理委员会批准（SCMCIRB-K2013022）。 在入组前，取得其监护人理解、同意并于知情同意书上签字。
   \subsection{研究对象}
   于2013年7月至2014年12月间，上海儿童医学中心新生儿重症监护病房（NICU）患儿，
     \subsubsection{入选及排除标准}
       \paragraph{入组标准}
-      胎龄小于34周，出生体重不低于950g的住院患儿。
+      胎龄小于34周，出生体重不低于950g的早产儿。
       \paragraph{排除标准}
-      1）新生儿早发型败血症，2）肝脏疾病，3）肾功能损害（Cr>88μM），4）存在先天肠道发育异常，5）需要进行大型胸部或腹部手术（男性包皮环切术或动脉导管结扎除外），6）预计使用肠外营养（Parental Nutrition， PN）支持供应超过50％的每日卡路里摄入量，且时间超过4天，7）静脉注射抗生素（除头孢噻肟、哌拉西他唑和甲硝唑），8）有口服抗生素史，9）有血便史，10）日龄大于五天者。
+      1）新生儿早发型败血症，2）肝脏疾病，3）肾功能损害（Cr>88μM），4）存在先天肠道发育异常，5）需要进行大型胸部或腹部手术（男性包皮环切术或动脉导管结扎除外），6）预计使用肠外营养（Parental Nutrition， PN）支持供应超过50％的每日热卡摄入量，且时间超过4天，7）静脉注射抗生素（除常规使用头孢噻肟、哌拉西他唑和甲硝唑），8）有口服抗生素史，9）有血便史，10）日龄大于五天者。
   \subsection{诊断标准}
-  关注每名患儿入院后的健康情况，评估并记录一般情况全身，腹部平片报告结果等，观察其是否发生NEC（II期和III期）或LOS。
+  评估并记录入组患儿一般情况，临床症状体征、实验室检查及影像学检查等，观察其是否发生NEC（II期和III期）或LOS。
 
   坏死性小肠结肠炎NEC诊断和分级根据“改良Bell分级标准”\cite{bell1978neonatal}：II期，伴有放射性肠扩张，肠梗阻，肠道积气和/或腹部压痛，和/或轻度代谢性酸中毒，肠鸣音减弱，血小板减少症。
 
   迟发型败血症LOS确诊标准：如果患儿在出生后72小时后，由至少两位新生儿科医生独立检查确认脓毒症体征/症状，血培养或其他体液培养阳性或可疑阳性，并接受过高级别抗生素治疗（例：美罗培南等），则诊断为LOS。
 
-  无感染性并发症或败血症、NEC的患儿为对照组。
+  住院期间无感染性并发症或败血症、无NEC的患儿纳入对照组。
 
   \subsection{主要实验室试剂及仪器}
   \label{主要实验室试剂及仪器}
@@ -235,23 +235,23 @@
 
   根据细菌血培养的阳性结果，来自LOS组的一名患儿被诊断出患有肺炎克雷伯菌菌血症，并且给予美罗培南21天；第二名患儿被诊断患有肺炎克雷伯氏菌和铜绿假单胞菌菌血症并给予美罗培南38天。第三名患儿被诊断为肺炎克雷伯菌菌血症、重症肺炎且对头孢噻肟耐药，因此给予美罗培南13天。
 
-  住院前和住院期间所有患者均未接受接受益生菌处方。
+  住院前和住院期间所有患者均未接受益生菌处方。
 
   \begin{table}[!hpb]
     \centering
-    \bicaption[早产儿患者临床情况]
-      {早产儿患者临床情况\footnotemark[1]}
+    \bicaption[NEC, LOS和对照组早产儿一般情况]
+      {早产儿患者一般情况\footnotemark[1]}
       {Demographic characteristics of Preterm NEC, LOS and control groups.}
     \label{tab:necdemographic}
     \begin{tabular}{lp{1.8cm}p{1.8cm}p{1.8cm}p{2cm}c}
       \toprule
-         & \textbf{NEC(N=3)} & \textbf{LOS(N=4)} & \textbf{Control(N=17)} & \textbf{Statistical Test} & \textit{p value} \\ \midrule
+         & \textbf{NEC (N=3)} & \textbf{LOS (N=4)} & \textbf{Control (N=17)} & \textbf{Statistical Test} & \textit{p value} \\ \midrule
         \textbf{胎龄(周)} & 29(29-30) & 30(29-31) & 31(28-33) & Kruskal-Wallis test & 0.074 \\
         \textbf{出生体重(克)} & 1416.3 (773.4-2149.1) & 1141.7 (633.4-1649.9) & 1527.4 (1391.6-1663.1) & Kruskal-Wallis test & 0.111 \\
-        \textbf{性别} &  &  &  & Fisher's test & 0.82 \\
+        \textbf{性别} &  &  &  & Fisher's exact test & 0.82 \\
         \multicolumn{1}{r}{女} & 3(75\%) & 2(67\%) & 9(53\%) &  & \\
         \multicolumn{1}{r}{男} & 1(25\%) & 1(33\%) & 8(47\%) &  & \\
-        \textbf{诊断时年龄(天)} & 16(11-19) & 12(10-22) & — & Wilcoxon rank-sum test & 0.629 \\
+        \textbf{诊断时年龄(天)} & 16(11-19) & 16(10-22) & — & Wilcoxon rank-sum test & 0.629 \\
         \textbf{住院时长(天)} & 54.3 (13.5-95.0) & 60.0 (24.8-95.2) & 32.9 (26.3-39.5) & Kruskal-Wallis test & 0.046 \\
         \textbf{标本总数} & 46 & 42 & 103 & — & — \\ \bottomrule
     \end{tabular}
@@ -400,7 +400,7 @@
 
 本研究描述并比较了NEC和LOS早产儿及其匹配对照组出生后肠道菌群的定植模式的发展。我们对192个肠道标本中的16S rRNA基因进行了测序：包括NEC早产儿的46个标本，LOS早产儿的42个标本，以及对照组的103个标本。使用Illumina-MiSeq平台为所有样品生成了总共7,472,400个序列，并检测出一些在自然环境下较为稀有的OTU。
 
-与一项早期研究相反，本研究显示早产儿在NEC发病期间存在丰富的变形菌；另外，数据显示，NEC患者中的厚壁菌门丰富（59.79\%），而对照组和LOS组则为变形菌。此外，NEC患者在发病前分别在1-3天和3-7天内肠球菌和葡萄球菌的平均丰度最高，相比对照组对照组相比增加了克雷伯氏菌和葡萄球菌的丰度也更高。这些发现表明潜在的致​​病性葡萄球菌属在NEC的发病机理中可能的作用以及常规致病物种如金黄色葡萄球菌（\textit{Staphylococcus areus}）和溶血性葡萄球菌（\textit{Staphylococcus haemolyticus}）。革兰氏阴性克雷伯氏菌丰度增加的趋势表明LPS的作用，作为TRL-4的配体其能促进体外Caco-2胞吞转运作用\cite{panigrahi1996escherichia}，并增加细菌易位\cite{Deitch1987}。
+本研究显示早产儿在NEC发病期间存在丰富的变形菌；另外，数据显示，NEC患者中的厚壁菌门丰富（59.79\%），而对照组和LOS组则为变形菌。此外，NEC患者在发病前分别在1-3天和3-7天内肠球菌和葡萄球菌的平均丰度最高，相比对照组对照组相比增加了克雷伯氏菌和葡萄球菌的丰度也更高。这些发现表明潜在的致​​病性葡萄球菌属在NEC的发病机理中可能的作用以及常规致病物种如金黄色葡萄球菌（\textit{Staphylococcus areus}）和溶血性葡萄球菌（\textit{Staphylococcus haemolyticus}）。革兰氏阴性克雷伯氏菌丰度增加的趋势表明LPS的作用，作为TRL-4的配体其能促进体外Caco-2胞吞转运作用\cite{panigrahi1996escherichia}，并增加细菌易位\cite{Deitch1987}。
 
 此外，LOS组中显着的肠球菌表明高级别抗生素治疗会对菌群平衡产生较大影响。尽管脓毒症中确切的微生物群组成仍有待通过动物研究来阐明\cite{Hand2012a,Sekirov2009}，脓毒症，免疫反应和微生物群破坏的机制及其后果可能有助于我们对败血症进展的理解并帮助制定战略性预防性解决方案。在一项关于成人的临床研究中，系统性炎症反应综合症对患者肠道厌氧菌减少和肠道致病菌增加与更高的败血症并发症和更高对死亡率相关\cite{Shimizu2011}；菌群的早期异常定植也与医院相关事件相关\cite{Dutta2014}，包括机械通气和抗生素治疗\cite{Moles2013}。虽然我们相对较小的样本量仅显示特定菌属与败血症发病相关的证据有限，但脓毒症患儿的宿主 - 微生物群 - 病原体相互作用值得进一步研究。
 
@@ -415,4 +415,4 @@
 
 本研究以及其他类似相关研究在肠道菌群动态变化和构成方面提供了早产儿NEC和LOS发生和发展的证据，从而帮助其早期预防、诊断和治疗，以降低其发病率和严重程度。
 
-然而，本研究有其局限性。首先，本研究中的所有婴儿均采用配方奶进行喂养，因此无法评估人类母乳的保护作用。此外，NEC和LOS组的样本量非常小。由于对所有患儿使用的经验性抗生素方案，因此难以规避抗生素对肠道微生物群的影响进而判断其影响程度。因此，本研究结果仍需要在更大样本量和更谨慎的方法的基础上，进行进一步研究中而得到证实。根据目前的研究结果，未来的研究应该包括更多的案例，以确定基于宏基因组测序的NEC和LOS的“高风险”的菌群模式。
+当然，本研究有其局限性。首先，本研究中的所有婴儿均采用配方奶进行喂养，因此无法评估人类母乳的保护作用。由于所有患儿入院时均的经验性抗生素方案，因此经验型抗生素对对肠道微生物群的影响无法完全避免。但是，三组横向及纵向比较研究方法可以最大程度找到差异影响因素。此外，NEC和LOS组样本量比较小。本研究结果仍需要在更大样本量的验证。
