修改了第二章

--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -409,9 +409,11 @@
 \section{结论}
 多年来，临床医生和科研工作者在不断努力探究NEC和LOS与肠道菌群的相关性。虽然尚未阐明特定的病原体或微生物模式，但现有的研究结果有助于改善临床策略，并最大限度地减少早产儿的并发症。
 
-本研究使用高通量测序描述、比较和分析早产儿出生后肠道微生物群的动态模式在NEC和LOS早产儿中的作用的研究。我们的研究结果结果支持了“肠道生态失调假说”，即肠道微生物群的“异常动态定制模式”是早产儿NEC进展的触发因素。
+本研究使用高通量测序描述、比较和分析早产儿出生后肠道微生物群的动态模式在NEC和LOS早产儿中的作用的研究。我们的研究结果结果支持了“肠道生态失调假说”，即肠道微生物群的“异常动态定制模式”是早产儿NEC和LOS发生进展的重要因素。
 
-肠道菌群失调和潜在致病菌的过度增殖与NEC和LOS进展至关重要，抗生素（特别是氨基糖苷类抗生素），可以减少早产儿肠道微生物群落的丰度。
+肠道菌群失调和潜在致病菌的过度增殖与NEC和LOS进展至关重要，抗生素（特别是氨基糖苷类抗生素），可以减少早产儿肠道微生物群落的丰度和多样性。
+
+本研究发现早产儿出生后以周为时间单位的肠道菌群变化模式。早产儿出生后第2周起，肠道菌群定植模式出现紊乱并逐渐发展为早产特定感染，NEC和LOS分别呈现不同的纵向变化规律，包括不同致病菌属的丰度增加及菌群多样性不同程度的降低，并且与临床变化相关。
 
 本研究以及其他类似相关研究在肠道菌群动态变化和构成方面提供了早产儿NEC和LOS发生和发展的证据，从而帮助其早期预防、诊断和治疗，以降低其发病率和严重程度。
 
