--- a/bib/chap2.bib
+++ b/bib/chap2.bib
@@ -8,7 +8,17 @@
 	Volume = {364},
 	Year = {2011}}
 
-@article{rees2010national,
+	@article{Fujii2004P0930,
+  title={P0930 AN ANALYSIS OF INTESTINAL INFLAMMATION IN NECROTIZING ENTERICOLITIS (NEC) USING PREMATURE RAT PUPS},
+  author={Fujii and Ohtsuka and Izumi and Ozawa and Shimizu},
+  journal={American Journal of Veterinary Research},
+  volume={39},
+  number={Supplement 1},
+  pages={703-7},
+  year={2004},
+}
+
+@article{rees2010nationa,
 	Author = {Rees, Clare M and Eaton, Simon and Pierro, Agostino},
 	Journal = {Journal of pediatric surgery},
 	Number = {7},
