--- a/tex/app_review.tex
+++ b/tex/app_review.tex
@@ -5,7 +5,7 @@
 \chapter{综述\quad 肠道菌群研究中粪便样品取样与保存方法}
 \label{app:review}
 
-\begin{center} \textbf{Sampling and Storage Methods of Fecal samples \\ in human intestinal microbiome study}\\刘嘉奕（综述）\qquad 洪莉（审校）
+\begin{center} \textbf{Sampling and Storage Methods of Fecal samples \\ in human intestinal microbiome study}
 \end{center}
 
 \begin{description}
