--- a/tex/chap1intro.tex
+++ b/tex/chap1intro.tex
@@ -32,7 +32,7 @@
 
 既往许多动物实验发现，无菌（Germ Free，GF）小鼠模型在出生后不并发NEC\cite{rozenfeld2001role}，引入正常小鼠肠道菌群后，肠道内潘氏细胞（Paneth cells）受损伤，肠道上皮细胞（Intetinal Epithelial Cell）的TLR4信号介导增强\cite{white2017paneth}。
 
-近年来临床研究也致力于发现NEC的特定致病菌。有研究表明，与对照组相比，早发型NEC的患儿在发病早期，肠道内厌氧芽孢杆菌丰度增加;而晚发型NEC患儿在发病前6天大肠志贺杆菌（\textit{Escherichia shigella}）比例增加，发病前3天，阪崎肠杆菌（\textit{Cronobacter sakazakii}）显著升高\cite{zhou2015longitudinal}。美国一项大型前瞻性病例对照研究发现，在混合模型中，NEC的发病与肠道内革兰氏阴性厌氧杆菌 $\gamma$-变形菌（\textit{Gamma-Proteobacteria}）的丰度呈正相关，与专性厌氧菌，尤其是厚壁\textit{Negativicutes}和梭状芽胞杆菌（\textit{Clostridia}）丰度呈负相关\cite{la2014patterned}。
+近年来临床研究也致力于发现NEC的特定致病菌。有研究表明，与对照组相比，早发型NEC的患儿在发病早期，肠道内厌氧芽孢杆菌丰度增加;而晚发型NEC患儿在发病前6天大肠志贺杆菌（\textit{Escherichia shigella}）比例增加，发病前3天，阪崎肠杆菌（\textit{Cronobacter sakazakii}）显著升高\cite{zhou2015longitudinal}。美国一项大型前瞻性病例对照研究发现，在混合模型中，NEC的发病与肠道内革兰氏阴性厌氧杆菌 $\gamma$-变形菌（\textit{Gamma-Proteobacteria}）的丰度呈正相关，与专性厌氧菌，尤其是厚壁(\textit{Negativicutes})和梭状芽胞杆菌（\textit{Clostridia}）丰度呈负相关\cite{la2014patterned}。
 
 \subsection{先天性巨结肠，先天性巨结肠肠炎与肠道菌群紊乱}
 先天性巨结肠（Hirschsprung’ s disease，HD）是病变肠段粘膜下和肌间神经丛副交感神经节细胞缺失，导致病变结肠持续痉挛收缩，近端肠管扩张，肠内容物排出受阻为特征的一种先天性肠道动力障碍性疾病。该病是小儿外科常见疾病，占消化道畸形的第二位\cite{langer1999transanal}。HD可以经外科手术切除无神经节细胞的肠管而治愈。然而，有高达40\%的HD患儿在巨结肠根治术后仍可能罹患巨结肠小肠结肠炎（Hirschsprung’s disease associated enterocolitis，HAEC），说明缺乏神经节细胞并非HAEC唯一的病因。HAEC是HD最常见和最严重的并发症，文献报道其发病率为20\%-58\%，复发率达50\%，病死率为1\%-10\%\cite{frykman2012hirschsprung}。
