--- a/tex/projectsreview.tex
+++ b/tex/projectsreview.tex
@@ -4,7 +4,5 @@
 % !TEX encoding = UTF-8 Unicode
 
 \begin{projects}{99}
-    \item 参与973项目子课题(2007年6月--2008年5月)
-    \item 参与自然基金项目(2005年5月--2005年8月)
-    \item 参与国防项目(2005年8月--2005年10月)
+    \item 参与国家自然科学基金项目(2018年6月--2019年3月)
 \end{projects}
