--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -8,8 +8,13 @@
 %%==================================================
 
 \begin{summary}
-  本研究利用高通量测序平台对坏死性小肠结肠炎和迟发性败血症早产儿出生后纵向肠道菌群变化进行测序，深入探究其菌群定植的多样性与丰度变化。
 
-  通过描述和比较菌群定植模式，我们发现早产儿出生后肠道菌群定植模式的改变可能使其易感于坏死性小肠结肠炎和迟发性败血症；肠道菌群定植模式改变的具体表现肠道菌群紊乱，包括多样性下降和潜在性致病菌丰度升高；且这种紊乱状态在发病期间持续存在。
+  本研究利用Illumina Miseq高通量测序平台对坏死性小肠结肠炎和迟发性败血症早产儿出生后肠道菌群进行测序，深入探究其菌群定植的多样性与丰度变化。
+
+  通过描述和比较菌群定植模式，我们发现早产儿出生后肠道菌群定植模式的改变使其易感于坏死性小肠结肠炎和迟发性败血症；肠道菌群模式改变具体表现为菌群多样性降低和潜在性致病菌属相对丰度增加。
+
+  肠道菌群菌群多样性降低表现为疾病组（NEC和LOS组）的粪便样本菌群的丰富度和均匀度均显著低于同时期内的对照组指数；另外，三组组间的菌群构成的相似度随日龄增加而递减。多样性降低的特征在疾病后期及治愈后仍然持续存在。
+
+  包括葡球菌、链球菌和克雷博菌在内的潜在致病菌属丰度从NEC和LOS发病前开始增加，并持续增加直到治愈后，这种持续存在的肠道模式可能是此二种疾病病程长、预后差的重要机制。
 
 \end{summary}
