--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -9,18 +9,24 @@
 \begin{abstract}
   \textbf{肠道菌群纵向模式与早产儿坏死性小肠结肠炎研究}
     \begin{description}
-      \item[目的] 探究早产儿出生后肠道菌群定植模式与坏死性小肠结肠炎(NEC)和迟发型败血症（LOS）的相关性。
+      \item[目的] 探究早产儿坏死性小肠结肠炎(NEC)和迟发型败血症（LOS）与出生后肠道菌群定植模式的相关性。
       \item[方法] 入组24名早产新生儿，其中4名在住院后发展为NEC，3名为LOS，其余17名为对照组。从出生后的第一天开始收集粪便标本，纵向收集直至患儿出院，共收集192个粪便样本。扩增每个粪便样品的16s rRNA基因的细菌V3~V4区域并测序；后续分析包括：OTU聚类，各分类水平注释，多样性分析和多级物种判别分析。
       \item[结果] 从出生后第14天开始，肠道微生物群定植模式开始在NEC，LOS及其匹配的对照组之间出现差异。迟发性脓毒症婴儿的肠道微生物群最少（Shannon指数= 1.66），对照组保持最多样化（Shannon指数= 0.88，p = 0.01）。潜在致病菌属肠球菌（20.86％）和葡萄球菌（8.67％）在NEC患者中显着，而在LOS组中克雷伯氏菌（42.15％）。NEC和对照组均较LOS组（3.66％）含有更多的乳球菌（分别为7.98％和13.76％）。
       \item[结论] 肠道菌群定植失调与早产儿NEC和LOS发生和发展相关，尤其是潜在致病菌属，包括链球菌、葡萄球菌和克雷伯菌的相对丰度增加与上述疾病发展相关。
     \end{description}
 
-  \textbf{儿科炎症性疾病与肠道菌群紊乱}
+%  \textbf{儿科炎症性疾病与肠道菌群紊乱}
+%    \begin{description}
+%      \item[目的]
+%      \item[方法]
+%      \item[结果]
+%      \item[结论]
+%    \end{description}
+  \textbf{肠道菌群研究中粪便样品取样与保存方法}
     \begin{description}
-      \item[目的]
-      \item[方法]
-      \item[结果]
-      \item[结论]
+        \item[摘要] 随着高通量测序技术（next generation sequencing, NGS ）的飞速发展，肠道菌群得以被更深入的研究。肠道内容物和粪便样品有着取样便捷、代表性强等特点，因此常被作为肠道菌群研究中的主要研究对象；而样品的收集和保存方法很大程度上影响其内部菌群结构和多样性，从而决定了后续测序分析的准确性。该文将就现今常用的肠道菌群研究中粪便样品的取样和保存方法进行综述。
+        \item[关键词] 肠道菌群；高通量测序；肠道内容物；粪便；取样
+        \item[基金项目] 国家自然科学基金（项目编号81771630）
     \end{description}
 \end{abstract}
 
@@ -30,14 +36,23 @@
       \item[AIM] To profile postpartum pattern progression of intestinal microbiome in these two diseases, with the aim of understanding their etiologic microbiota profiles from a dynamic perspective.
       \item[METHODS] 24 preterm newborns were enrolled, among whom four subsequently developed NEC, three LOS, and the remaining 17 were healthy controls. Starting from the first stool after birth and continuing till discharge, 192 longitudinal fecal samples were prospectively collected from all patients. Bacterial V3~V4 region of 16s rDNA from each stool sample were amplified and sequenced.
       \item[RESULTS] The postpartum gut microbiota colonization started to diverge among NEC, LOS and their matched control groups, from the second week after birth.  Late-onset sepsis infants held the least diversified gut microbiota (Shannon index=1.66), with the control group held the most diversified one (Shannon index=0.88, p=0.01). Potentially pathogenic genus Enterococcus (20.86\%) and Staphylococcus (8.67\%) were prominent in NEC patients and Klebsiella (42.15\%) in LOS group. Both NEC and control groups addressed higher proportion of Lactococcus (7.98\% and 13.76\%, respectively) than the control group (3.66\%).
-      \item[CONCLUSIONS] After-birth colonization pattern of gut microbiome might predispose preterm newborns to necrotizing enterocolitis or late-onset sepsis, in which reduced diversity of the whole microbiota community and potentially pathogenic genus could have played an essential role in disease progression. Still, more studies are needed to identify etiological strains, underlying mechanisms and correspondent microbial patterns. 
+      \item[CONCLUSIONS] After-birth colonization pattern of gut microbiome might predispose preterm newborns to necrotizing enterocolitis or late-onset sepsis, in which reduced diversity of the whole microbiota community and potentially pathogenic genus could have played an essential role in disease progression. Still, more studies are needed to identify etiological strains, underlying mechanisms and correspondent microbial patterns.
     \end{description}
 
-  \textbf{Pediatric Enterocolitis in Association with Intestinal Microbiota}
+%  \textbf{Pediatric Enterocolitis in Association with Intestinal Microbiota}
+%    \begin{description}
+%      \item[AIM] 详细内容
+%      \item[METHODS] 详细内容
+%      \item[RESULTS] 详细内容
+%      \item[CONCLUSIONS] 详细内容 \ldots
+%    \end{description}
+
+  \textbf{Sampling and Storage Methods of Fecal samples in human intestinal microbiome study}
     \begin{description}
-      \item[AIM] 详细内容
-      \item[METHODS] 详细内容
-      \item[RESULTS] 详细内容
-      \item[CONCLUSIONS] 详细内容 \ldots
+      \item[Abstract]With the rapid development of high-throughput sequencing (NGS) technique, intestinal microbiome could be studied more deeply. Intestinal contents and fecal samples have the characteristics of convenient sampling and strong representation, so they are often used as the main research objects in the study of intestinal microbiota. The method of collecting and storage of samples are very important to affect the internal flora structure and diversity, which determines the accuracy of subsequent sequencing analysis. This review summarizes the sampling and storage methods of fecal samples in the study of intestinal microbiome.
+      \item[Key Words]Intestinal Microbiome；High Throughput DNA Sequencing；Intestinal Contents；Feces；Specimen Collection
+      \item[Fundings]National Natural Science Foundation of China (Project No. 81771630)
     \end{description}
+
+
 \end{englishabstract}
