--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -11,7 +11,7 @@
 \label{chap:nec}
 
 \section{引言}
-肠道菌群紊乱常常见于多种早产并发症，包括坏死性小肠结肠炎（Necrotizing Enterocolitis, NEC）和迟发性败血症（Late-Onset Sepsis，LOS）。前者是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关\cite{neu2011necrotizing}，在早产儿发病率为4～7\%\cite{rees2010national}；起病快，进展凶险，严重者可致死。近年来有研究发现肠道菌群紊乱存在于NEC发病期间。后者是一种在出生后72小时后发生的败血症，其是早产儿和极低出生体重的死亡主要原因之一\cite{stoll2002late}。近期，有报道LOS患儿肠道内菌群多样性下降\cite{mai2013distortions}，致病菌包括肠球菌（\textit{Enterococcus}）丰度增加\cite{stewart2017longitudinal}，提示肠道菌群紊乱与LOS发病相关。本研究拟前瞻性观察早产儿出生后总想肠道菌群变化规律，以探究肠道菌群不同变化轨迹与NEC和LOS发生发展的相关规律，为明确其发病机制并早期预防、诊断和治疗提供依据。
+肠道菌群紊乱常常见于多种早产并发症，包括坏死性小肠结肠炎（Necrotizing Enterocolitis, NEC）和迟发性败血症（Late-Onset Sepsis，LOS）。前者是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关\cite{neu2011necrotizing}，在早产儿发病率为4～7\% \cite{rees2010nationa}；起病快，进展凶险，严重者可致死。近年来有研究发现肠道菌群紊乱存在于NEC发病期间。后者是一种在出生后72小时后发生的败血症，其是早产儿和极低出生体重的死亡主要原因之一\cite{stoll2002late}。近期，有报道LOS患儿肠道内菌群多样性下降\cite{mai2013distortions}，致病菌包括肠球菌（\textit{Enterococcus}）丰度增加\cite{stewart2017longitudinal}，提示肠道菌群紊乱与LOS发病相关。本研究拟前瞻性观察早产儿出生后总想肠道菌群变化规律，以探究肠道菌群不同变化轨迹与NEC和LOS发生发展的相关规律，为明确其发病机制并早期预防、诊断和治疗提供依据。
 
 \section{材料与方法}
   \subsection{伦理}
@@ -290,7 +290,7 @@
       \end{figure}
 
     \subsubsection{目（order）水平}
-    在目水平，三组患儿肠道内以肠杆菌目（\textit{Enterobacteriales}）、乳杆菌目（\textit{Lactobacillales}）、芽孢杆菌目（\textit{Bacillales}）、梭菌目（\textit{Clostridiales}）、假单胞菌目（\textit{Pseudomonadales}）、微球菌目\textit{Micrococcales}为主。肠杆菌目在LOS组最高（57.05\%），对照组次之（40.89\%），NEC组最低（34.87\%），三组丰度差异在统计学上显著（p = 0.011）；乳杆菌目在NEC组丰度最高，为37.94\%，在LOS和对照组丰度分别为（27.1\%）和（28.28\%），且三组间乳杆菌丰度差异不显著（p = 0.176）；芽孢杆菌目在LOS组丰度(5.08\%)显著低于NEC组（15.62\%，两组比较p = 0.05），对照组丰度为10.91\%；梭菌目分别在三组的丰度类似：NEC组为\%5.36，LOS组为\%6.54，对照组为4.86\%；假单胞菌目在对照组的丰度（8.62\%）显著高于NEC组（3.15\%，p = 0.015）和LOS组(\%2.39，p = 0.015)。另外，棒状杆菌目（\textit{corynebacteriales})和黄色单胞菌目（\textit{Xanthomonadales}）为对照组所独有（丰度分别为1.62\%和0.88\%）的菌目（图\ref{fig:2order}）。
+    在目水平，三组患儿肠道内以肠杆菌目（\textit{Enterobacteriales}）、乳杆菌目（\textit{Lactobacillales}）、芽孢杆菌目（\textit{Bacillales}）、梭菌目（\textit{Clostridiales}）、假单胞菌目（\textit{Pseudomonadales}）、微球菌目\textit{Micrococcales}为主。肠杆菌目在LOS组最高（57.05\%），对照组次之（40.89\%），NEC组最低（34.87\%），三组丰度差异在统计学上显著（p = 0.011）；乳杆菌目在NEC组丰度最高，为37.94\%，在LOS和对照组丰度分别为（27.1\%）和（28.28\%），且三组间乳杆菌丰度差异不显著（p = 0.176）；芽孢杆菌目在LOS组丰度(5.08\%)显著低于NEC组（15.62\%，两组比较p = 0.05），对照组丰度为10.91\%；梭菌目分别在三组的丰度类似：NEC组为5.36\%，LOS组为6.54\%，对照组为4.86\%；假单胞菌目在对照组的丰度（8.62\%）显著高于NEC组（3.15\%，p = 0.015）和LOS组(2.39\%，p = 0.015)。另外，棒状杆菌目（\textit{corynebacteriales})和黄色单胞菌目（\textit{Xanthomonadales}）为对照组所独有（丰度分别为1.62\%和0.88\%）的菌目（图\ref{fig:2order}）。
       %目水平图
       \begin{figure}[!htp]
         \centering
@@ -302,7 +302,7 @@
       \end{figure}
 
     \subsubsection{科（family）水平}
-    在科水平，三组患儿肠道内以肠杆菌科（\textit{Enterobacteriaceae}）、肠球菌科(\textit{Enterococcaceae})、乳杆菌目（\textit{Lactobacillales}）、链球菌科（\textit{Streptococcaceae}）、葡萄球菌科（\textit{Staphylococcaceae}）、假单胞菌科\textit{Pseudomonadaceae}占主导。肠杆菌科丰度在LOS组最高，为57.05\%，NEC组和对照组丰度分别为34.87\%和40.89\%，三组间丰度差异显著（p = 0.011）；肠球菌科在三组的丰度分别为NEC组20.86\%，LOS组18.15\%，对照组8.46\%，三组间差异不显著（p = 0.109）；LOS组链球菌科百分比（8.70\%）显著低于NEC组（16.67\%，p = 0.）和对照组（19.07\%p = 0.023），NEC组（16.67\%，且三组比较差异不显著（p = 0.438）；假单胞菌在三组的丰度分别为NEC组2.41\%，LOS组2.05\%，对照组5.40\%，三组间差异显著（p = 0.039）（图\ref{fig:2family}）。
+    在科水平，三组患儿肠道内以肠杆菌科（\textit{Enterobacteriaceae}）、肠球菌科(\textit{Enterococcaceae})、乳杆菌目（\textit{Lactobacillales}）、链球菌科（\textit{Streptococcaceae}）、葡萄球菌科（\textit{Staphylococcaceae}）、假单胞菌科\textit{Pseudomonadaceae}占主导。肠杆菌科丰度在LOS组最高，为57.05\%，NEC组和对照组丰度分别为34.87\%和40.89\%，三组间丰度差异显著（p = 0.011）；肠球菌科在三组的丰度分别为NEC组20.86\%，LOS组18.15\%，对照组8.46\%，三组间差异不显著（p = 0.109）；LOS组链球菌科百分比（8.70\%）显著低于NEC组（16.67\%，p = 0.）和对照组（19.07\%，p = 0.023），NEC组为16.67\%，且三组比较差异不显著（p = 0.438）；假单胞菌在三组的丰度分别为NEC组2.41\%，LOS组2.05\%，对照组5.40\%，三组间差异显著（p = 0.039）（图\ref{fig:2family}）。
       %科水平图
       \begin{figure}[!htp]
         \centering
@@ -402,7 +402,7 @@
 
 本研究显示早产儿在NEC发病期间存在丰富的变形菌；另外，数据显示，NEC患者中的厚壁菌门丰富（59.79\%），而对照组和LOS组则为变形菌。此外，NEC患者在发病前分别在1-3天和3-7天内肠球菌和葡萄球菌的平均丰度最高，相比对照组对照组相比增加了克雷伯氏菌和葡萄球菌的丰度也更高。这些发现表明潜在的致​​病性葡萄球菌属在NEC的发病机理中可能的作用以及常规致病物种如金黄色葡萄球菌（\textit{Staphylococcus areus}）和溶血性葡萄球菌（\textit{Staphylococcus haemolyticus}）。革兰氏阴性克雷伯氏菌丰度增加的趋势表明LPS的作用，作为TRL-4的配体其能促进体外Caco-2胞吞转运作用\cite{panigrahi1996escherichia}，并增加细菌易位\cite{Deitch1987}。
 
-此外，LOS组中显着的肠球菌表明高级别抗生素治疗会对菌群平衡产生较大影响。尽管脓毒症中确切的微生物群组成仍有待通过动物研究来阐明\cite{Hand2012a,Sekirov2009}，脓毒症，免疫反应和微生物群破坏的机制及其后果可能有助于我们对败血症进展的理解并帮助制定战略性预防性解决方案。在一项关于成人的临床研究中，系统性炎症反应综合症对患者肠道厌氧菌减少和肠道致病菌增加与更高的败血症并发症和更高对死亡率相关\cite{Shimizu2011}；菌群的早期异常定植也与医院相关事件相关\cite{Dutta2014}，包括机械通气和抗生素治疗\cite{Moles2013}。虽然我们相对较小的样本量仅显示特定菌属与败血症发病相关的证据有限，但脓毒症患儿的宿主 - 微生物群 - 病原体相互作用值得进一步研究。
+此外，LOS组中显著的肠球菌表明高级别抗生素治疗会对菌群平衡产生较大影响。尽管脓毒症中确切的微生物群组成仍有待通过动物研究来阐明\cite{Hand2012a,Sekirov2009}，脓毒症，免疫反应和微生物群破坏的机制及其后果可能有助于对败血症进展的理解，并有助于疾病的预防。在一项关于成人的临床研究中，系统性炎症反应综合症对患者肠道厌氧菌减少和肠道致病菌增加与更高的败血症并发症和更高对死亡率相关\cite{Shimizu2011}；菌群的早期异常定植也与医院相关事件相关\cite{Dutta2014}，包括机械通气和抗生素治疗\cite{Moles2013}。虽然我们相对较小的样本量仅显示特定菌属与败血症发病相关的证据有限，但脓毒症患儿的宿主 - 微生物群 - 病原体相互作用值得进一步研究。
 
 另一项研究发现，早产儿肠道微生物群的定植和突然变化可能是分娩方式，喂养类型和孕龄的结果\cite{Dutta2014}。以往研究在早产儿中观察到从芽孢杆菌，$\gamma$芽孢杆菌到梭菌的一系列细菌\cite{LaRosa2014}）的先后主导作用在本研究内在包括LOS患者在内的大多数研究受试者中也观察到。本研究证实了出生后以周为时间单位的细菌定植模式，并发现每组肠道微生物群在不同组患儿间存在的显着差异。此外，本研究数据显示，在出生后第14天，NEC和对照组之间的肠道微生物群显着不同，尽管在出生后的前14天内具有相似的定植模式（图\ref{fig:2ingroupweek})，Anosim r = 0.32 p = 0.001），表明肠道微生态失调与NEC发病之间的强相关性。最后，肠道微生物群在出生后第21天至第28天的差异（图\ref{fig:2ingroupweek}，ANOSIM r = 0.27，p = 0.030）表明在NEC进展期间持续的生态失调，这与之前的横断面研究一致\cite{Wang2009}。
 
