--- a/tex/ack.tex
+++ b/tex/ack.tex
@@ -7,13 +7,13 @@
 
   一谢父母，父兮生我，母兮鞠我；拊我蓄我，长我育我，顾我复我，出入腹我；春晖寸草，左提右挈，于生活嘘寒问暖、关怀备至，于学业慷慨解囊、鼎力相助；欲报之德，昊天罔极。
 
-  再谢师长，百世之师，诲尔谆谆；高山仰止，景行行止。蒙恩师洪莉不弃，传道授业解惑，春风化雨，润物无声；蒙儿童医学中心潘莉雅、顾莹芬老师厚爱，博我以文，约我以礼，不厌其烦，循循善诱；承蒙外导Valeriy Poroyko博士关照，治学严谨，求真务实，造诣精深，为人和蔼，德为人表。怀瑾握瑜，不胜枚举，深感无以为报，唯有心中谨记，日后悬梁刺股，负薪挂角，披荆斩棘，唯愿不负师恩。
+  再谢师长，百世之师，诲尔谆谆；高山仰止，景行行止。蒙恩师洪莉不弃，传道授业解惑，春风化雨，润物无声；蒙儿童医学中心冯一、潘莉雅、顾莹芬、付欢欢、刘云曼、费俊、赵卓琪、郑家琪、鲍成宇老师厚爱，博我以文，约我以礼，不厌其烦，循循善诱；承蒙Dr. Valeriy Poroyko关照，治学严谨，求真务实，造诣精深，为人和蔼，德为人表。怀瑾握瑜，不胜枚举，深感无以为报，唯有心中谨记，日后悬梁刺股，负薪挂角，披荆斩棘，唯愿不负师恩。
 
   三谢友人，山河不足重，重在遇知己。遥谢挚友程瑶，高山流水，幸得此知音，虽行路艰难，歧路常遇，有朝一日必云帆直挂，乘风破浪，横渡沧海。感谢挚友张菁、周琳，相知无远近，万里尚为邻，喜怒哀乐，与汝共享，风风雨雨，与尔共历，千言万语，只求君好。感恩师姐杜丽娟、李玉青、谢丽清、室友李亚璇、吴蕊池、马希瑞，师妹张卉、朱媛、韩茜，何缘幸相识，承君呵护重。
 
-  四谢同仁，响必应之与同声，道固从之与同类。感恩City of Hope National Medical Center各位无私帮助：Dr. Ravi Salgia, Dr. Edward Wenge Wang, Prakash Kulkarni, Chong Kai Wang, Bolot Mambetsariev, Tamara Mirzapoiazova, Ekaterina Semenyuk, Atish Mohanty, Arjun Kalvala, Arin Nam, Anusha Nathan, Keqiang Zhang, Wendong Li, 梁睿，齐秀英，郑桐森，王广雨，张元新，赵玲，孙婷…………与尔共事，神怿气愉。
+  四谢同仁，响必应之与同声，道固从之与同类。感恩City of Hope National Medical Center各位无私帮助：Dr. Ravi Salgia, Dr. Edward Wenge Wang, Prakash Kulkarni, Chong Kai Wang, Bolot Mambetsariev, Tamara Mirzapoiazova, Ekaterina Semenyuk, Atish Mohanty, Arjun Kalvala, Arin Nam, Anusha Nathan, Keqiang Zhang, Wendong Li, 梁睿，齐秀英，郑桐森，王广雨，张元新，赵玲，孙婷…… 与尔共事，神怿气愉。
 
-  And special gratitude to Ka Ming Pang——\textbf{you taught me all the precious things}.
+  Special \& heartily thanks to Ka Ming Pang \textbf{for all the inspiration, encouragement and love you have given me. }.
 
   五谢光阴，逝者如斯，不舍昼夜，冲淡一切欢愉与苦难，带来所有宽慰与光明。
 
