--- a/tex/symbol0.tex
+++ b/tex/symbol0.tex
@@ -32,7 +32,7 @@
     OTU & Operational Taxanomic Unit & 操纵分类单元\\
     PAF & Platelet Activating Factor & 血小板活化因子\\
     PCA & Primary Component Analysis & 主成分分析\\
-    PCO & Primary Coordinary Analysis & 主坐标分析\\
+    PCoA & Primary Coordinary Analysis & 主坐标分析\\
     PRR & Patterned Recognizing Receptor & 模式识别受体\\
     TNF & Tumor Necrosis Factor & 肿瘤坏死因子\\
     UC & Ulcerative Colitis & 溃疡性结肠炎 \\
