--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -11,6 +11,7 @@
 \label{chap:compare}
 
 \section{引言}
+
 \section{材料与方法}
   \subsection{伦理}
   该研究经上海市儿童医学中心伦理联合委员会批准，上海交通大学医学院（SCMCIRB-K2013022）。 在采集每名患儿的粪便样本之前，取得其监护人理解、同意并于知情同意书上签字。
@@ -83,8 +84,7 @@
     \end{tabular}
   \end{table}
 
-
-  使用Illumina MiSeq高通量测序、优化后，得到2,749,518条16s rRNA基因序列，优化碱基数目共1223776595，优化平均序列长度为445bp。
+  使用Illumina MiSeq高通量测序、优化后，得到2,749,518条16s rRNA gene reads，优化碱基数目共1223776595，优化平均序列长度为445bp。
 
   \subsection{分类学分析}
   对于测序数据进行OTU聚类，采用RDP classifier贝叶斯算法对97\%相似水平的OTU代表序列进行分类学分析，并分别在各个分类水平（从域（domain）到属（genus））统计各样本的群落组成，比对silva数据库得出各群落数量。
